# skfuntips

./: .gitignore  CMakeLists.txt  README.md  README_en.txt  diff.patch  px.pro  whoAmI
encdet/: CMakeLists.txt
encdet/src/: CMakeLists.txt  encdet.cpp
giflib/: CMakeLists.txt
help/: help.html
i18n/: zh_CN.ts
src/: CMakeLists.txt  ChangJianDB.txt  CompositeResource.cpp  CompositeResource.h  Gif.cpp  Gif.h  GifSaver.cpp  GifSaver.h  HighlightDB.cpp  HighlightDB.h  IParam.h  IProcessor.h  KeywordsDB.cpp  KeywordsDB.h  KeywordsDB.txt  PinYinDB.cpp  PinYinDB.h  PinYinDB.txt  ProcessorContainer.cpp  ProcessorContainer.h  QtResource.cpp  QtResource.h  Result.cpp  Result.h  ResultHighlighter.cpp  ResultHighlighter.h  ResultType.h  def.h  haXi.h  hangChuLi.cpp  hangChuLi.h  r.qrc  tuBiao.aps  tuBiao.rc
src/gui/: AboutDialog.ui  CMakeLists.txt  CompositeResourceWidget.cpp  CompositeResourceWidget.h  CompositeResourceWidget.ui  FontWidget.cpp  FontWidget.h  FontWidget.ui  ImageListWidget.cpp  ImageListWidget.h  ImageListWidget.ui  ImagePreviewDialog.cpp  ImagePreviewDialog.h  ImagePreviewDialog.ui  ImagePreviewWidget.cpp  ImagePreviewWidget.h  ImagePreviewWidget.ui  IntRangeWidget.cpp  IntRangeWidget.h  IntRangeWidget.ui  MainFrame.cpp  MainFrame.h  MainFrame.ui  ParamListWidget.cpp  ParamListWidget.h  ParamListWidget.ui  ParamWidget.cpp  ParamWidget.h  ProcessThread.h  ProcessWidget.cpp  ProcessWidget.h  ProcessWidget.ui  ResultWidget.cpp  ResultWidget.h  ResultWidget.ui  SeedWidget.cpp  SeedWidget.h  SeedWidget.ui  SourceWidget.cpp  SourceWidget.h  (+7 more)
src/param/: FontParam.cpp  FontParam.h  Frame.h  FrameSegment.cpp  FrameSegment.h  ImageListParam.cpp  ImageListParam.h  IntRangeParam.cpp  IntRangeParam.h  SeedParam.cpp  SeedParam.h  StringParam.cpp  StringParam.h
src/processor/: AverageInsertProcessor.cpp  AverageInsertProcessor.h  DeEncryptProcessor.cpp  DeEncryptProcessor.h  EncryptProcessor.cpp  EncryptProcessor.h  InsertProcessor.cpp  InsertProcessor.h  KeywordsProcessor.cpp  KeywordsProcessor.h  LevelProcessor.cpp  LevelProcessor.h  LevelSeedProcessor.cpp  LevelSeedProcessor.h  OffsetProcessor.cpp  OffsetProcessor.h  PinYinProcessor.cpp  PinYinProcessor.h  ReverseProcessor.cpp  ReverseProcessor.h  ShuffleProcessor.cpp  ShuffleProcessor.h  SimilarProcessor.cpp  SimilarProcessor.h  ToBigCharProcessor.cpp  ToBigCharProcessor.h  ToGifProcessor.cpp  ToGifProcessor.h  ToImageProcessor.cpp  ToImageProcessor.h  VerticalLayoutProcessor.cpp  VerticalLayoutProcessor.h
test/: AnimatedGifSaver.cpp  CMakeLists.txt  all_cli.cpp  bian_da_zi_ce_shi.txt  bian_pin_yin_ce_shi.txt  bian_tu_pian_ce_shi.txt  encrypt_process_test.cpp  ge_ci_1.txt  gif_bao_cun_ce_shi.cpp  hang_duan_kai_ce_shi.cpp  main.cpp  offset_process_test.cpp  ping_jun_cha_ru_ce_shi.txt  qu_chu_huan_hang_ce_shi.cpp  qu_chu_huan_hang_ce_shi.txt  test_function.cpp  test_function.h  unicode_test.cpp  xie_yin_ce_shi.txt  xin_wen_1.txt  zheng_shu_fan_wei_ce_shi.cpp  zheng_ze_ce_shi.cpp  zhong_zi_ce_shi.cpp  zhong_zi_ce_shi.txt  zong_heng_ce_shi.txt
test/gui_test/: CMakeLists.txt  CeShiLabel.h  moBan.h  shu_ru_kong_jian_ce_shi.cpp  zheng_shu_fan_wei_kong_jian_ce_shi.cpp  zhong_zi_kong_jian_ce_shi.cpp  zi_ti_kong_jian_ce_shi.cpp
util/: CMakeLists.txt  so.cpp  to_tl.cpp
